--- a/project1/composer.json
+++ b/project1/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "laravelcollective/html": "^6.2",
         "nwidart/laravel-modules": "^8.2"
     },
     "require-dev": {
